; ModuleID = '/home/carl/AnghaBench/git/extr_read-cache.c_ce_compare_link.c'
source_filename = "/home/carl/AnghaBench/git/extr_read-cache.c_ce_compare_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i64, i32 }
%struct.cache_entry = type { i32, i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cache_entry*, i64)* @ce_compare_link to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ce_compare_link(%struct.cache_entry* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cache_entry*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.strbuf, align 8
  store %struct.cache_entry* %0, %struct.cache_entry** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 -1, i32* %6, align 4
  %11 = bitcast %struct.strbuf* %10 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %11, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 16, i1 false)
  %12 = load %struct.cache_entry*, %struct.cache_entry** %4, align 8
  %13 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load i64, i64* %5, align 8
  %16 = call i64 @strbuf_readlink(%struct.strbuf* %10, i32 %14, i64 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %42

19:                                               ; preds = %2
  %20 = load %struct.cache_entry*, %struct.cache_entry** %4, align 8
  %21 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %20, i32 0, i32 0
  %22 = call i8* @read_object_file(i32* %21, i32* %9, i64* %8)
  store i8* %22, i8** %7, align 8
  %23 = load i8*, i8** %7, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %25, label %39

25:                                               ; preds = %19
  %26 = load i64, i64* %8, align 8
  %27 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %10, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = icmp eq i64 %26, %28
  br i1 %29, label %30, label %36

30:                                               ; preds = %25
  %31 = load i8*, i8** %7, align 8
  %32 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %10, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  %34 = load i64, i64* %8, align 8
  %35 = call i32 @memcmp(i8* %31, i32 %33, i64 %34)
  store i32 %35, i32* %6, align 4
  br label %36

36:                                               ; preds = %30, %25
  %37 = load i8*, i8** %7, align 8
  %38 = call i32 @free(i8* %37)
  br label %39

39:                                               ; preds = %36, %19
  %40 = call i32 @strbuf_release(%struct.strbuf* %10)
  %41 = load i32, i32* %6, align 4
  store i32 %41, i32* %3, align 4
  br label %42

42:                                               ; preds = %39, %18
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @strbuf_readlink(%struct.strbuf*, i32, i64) #2

declare dso_local i8* @read_object_file(i32*, i32*, i64*) #2

declare dso_local i32 @memcmp(i8*, i32, i64) #2

declare dso_local i32 @free(i8*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
